@@ -1,9 +1,7 @@
-FROM openjdk:8-jdk-alpine
-ENV APP_LOG_DIR=/var/log/pokemon-wiki \
-    APP_OPTS="-Dfile.encoding=UTF-8" \
-    JVM_OPTS="-server -Xms500m -Xmx500m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseConcMarkSweepGC \
--verbose:gc -Xloggc:${APP_LOG_DIR}/gc_%p.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintAdaptiveSizePolicy \
--XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=30m"
+FROM openjdk:11
+ENV APP_OPTS="-Dapp.dbfile=/app/pokemon_wiki.db" \
+    JVM_OPTS="-XX:+UseG1GC -Xms500m -Xmx500m -XX:MaxGCPauseMillis=500 -XX:+HeapDumpOnOutOfMemoryError \
+-Xlog:gc*:file=gc_%p.log::filecount=5,filesize=10M"
 WORKDIR /app
 COPY ./pokemon-wiki-web/target/pokemon-wiki-web.jar /app
 COPY ./pokemon_wiki.db /app
